# addressapi

./: README.md  pyproject.toml
src/: manage.py
src/addressapi/: asgi.py  settings.py  urls.py  wsgi.py
